--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.13",
+    "animejs": "^4.2.2",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "react-scroll-parallax": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
