--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.13",
     "animejs": "^4.2.2",
+    "axios": "^1.13.1",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.544.0",
@@ -23,6 +24,7 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
     "react-scroll-parallax": "^3.5.0"
   },
