--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
-    "react-scroll-parallax": "^3.5.0"
+    "react-scroll-parallax": "^3.5.0",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
