--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@react-spring/parallax": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
     "@tailwindcss/vite": "^4.1.13",
     "animejs": "^4.2.2",
     "axios": "^1.13.1",
